# enterprise_agent_accelerator

./: .env.example  .gitignore  .index_status.json  DEMO_HR_TICKET_AGENT.txt  DEMO_RESEARCH_AGENT.txt  DEMO_STOCK_ANALYSIS_AGENT.txt  HOW_TO_RUN.txt  README.md  agents.yaml  config.yaml  memory.yaml  pyproject.toml  rbac.yaml  requirements.txt  tasks.yaml
.chroma_db/: chroma.sqlite3
cli/: index.py  main.py  watch.py
connectors/: base.py  confluence.py  jira.py  local_file.py  outlook.py  rest_auto.py  sap.py  servicenow.py  sharepoint.py  web_search.py
docs/: runbook.txt  search_findings.txt
enterprise_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory/: knowledge.py  vector_store.py
memory/loaders/: confluence_loader.py  file_loader.py  sharepoint_loader.py
monitoring/: audit.py  dashboard.py  tracer.py  web_ui.py
runtime/: llm_router.py  orchestrator.py  task_graph.py
security/: rbac.py  secrets.py
utils/: config.py  logger.py
